# mlops_s2

./: .gitignore  LICENSE  Makefile  README.md  cloudbuild.yaml  data.dvc  pyproject.toml  requirements.txt  requirements_tests.txt
.dvc/: config
.github/workflows/: test.yaml
data/processed/: image.npy
dockerfiles/: Dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/classifier/: model.pt
s2_m6_prj/: __init__.py  predict_model.py  train_model.py
s2_m6_prj/data/: make_dataset.py
s2_m6_prj/models/: model.py
tests/: __init__.py  test_data.py  test_model.py  test_training.py
